# quickie

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  setup.cfg  setup.py
__mom__/: __init__.py  tests.py
__quickie/: __init__.py  install.py  test.py  tests.py
_mtasks/: __init__.py  tests.py
docs/source/: conf.py  index.rst
mom_tasks/: __init__.py  tests.py
src/quickie/: __init__.py  _cli.py  _loader.py  _meta.py  _version.py  argparser.py  cli.py  config.py  context.py  factories.py  loader.py  tasks.py
src/quickie/utils/conditions/: __init__.py  base.py
src/task_mom/: __init__.py  __main__.py  _meta.py  _version.py  argparser.py  cli.py  constants.py  context.py  errors.py  loader.py  namespace.py  settings.py  tasks.py
src/task_mom/completion/: _internal.py  base.py  python.py
src/task_mom/utils/: imports.py
tests/: conftest.py  test_cli.py  test_completion.py  test_context.py  test_tasks.py
tests/__mom_test__/: __init__.py  nested.py
tests/__quickie_test/: __init__.py
tests/test_utils/: test_conditions.py  test_imports.py
