[metadata]
name = task-mom
description = A CLI tool that does your chores while you slack off.
long_description_content_type = text/markdown
long_description = file: README.md, CHANGELOG.md
license = MIT

[aliases]
test = pytest

[tool:pytest]
addopts =
    --verbose
    --cov task_mom
markers =
    unit
    integration
python_files = tests/*
mock_use_standalone_module = true
